--- a/.env
+++ b/.env
@@ -11,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=chrccg
+DB_DATABASE=church
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -28,14 +28,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtpk
-MAIL_HOST=mail.rccgchristchapel.com.ng
-MAIL_PORT=465
+MAIL_MAILER=smtp
+MAIL_HOST=mail.5starcompany.com.ng
+MAIL_PORT=587
 MAIL_USERNAME=info@rccgchristchapel.com.ng
 MAIL_PASSWORD=@Akinlabi525
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=info@rccgchristchapel.com.ng
-MAIL_FROM_NAME=info@rccgchristchapel.com.ng
+MAIL_FROM_NAME=${APP_NAME}
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
